# todo-api-pf

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 2738cdb78bd2_update_enum.py  51b3e5922c90_create_users_table.py  c09e9e108dbb_create_new_users_and_task_models.py  cc6994f54285_create_task_table_and_change_some_.py  d5a9d2d4bae1_create_task_table.py  e300c030493d_create_relationship_between_task_and_.py  fb97b11c619e_create_relationship.py
src/: conftest.py  main.py
src/apps/: models.py
src/apps/auth/: routers.py
src/apps/auth/tests/: test_auth_routers.py
src/apps/core/: database.py  security.py
src/apps/tasks/: models.py  routers.py  schemas.py
src/apps/users/: models.py  routers.py  schemas.py
src/apps/users/tests/: test_users.py
todo_list_pf/: app.py  database.py  main.py  models.py  schemas.py  security.py  settings.py
todo_list_pf/routers/: auth.py  tasks.py  users.py
