[project]
name = "todo-list-pf"
version = "0.1.0"
description = ""
authors = [
    {name = "Duanne Moraes ",email = "duanne.souza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
